syntax = "proto2";
package cn.wzj.netty.proto;
message DAT_ElementProperty
{
	required int32 air = 1;
	required int32 water = 2;
	required int32 fire = 3;
	required int32 earth = 4;
}
message DAT_ElementType
{
	enum ele
	{
		Air = 0;
		Water = 1;
		Fire = 2;
		Earth = 3;
	}
}
