syntax = "proto2";
import "Dat_General.proto";
package cn.wzj.netty.proto;

message DAT_UserData
{
	required string uid = 1; // ����UID
	required string nickname = 2; // �����ǳ�
	required int32 lv = 3; // ���ҵȼ�
	required int32 experience = 4; // ����ֵ
	required string roleId = 5; // ���ҽ�ɫid

	required int32 strength = 6; // ��������
	required int32 magic = 7; // ħ������
	required int32 agility = 8; // ���ݶ�
	required DAT_ElementProperty elementProperty = 9; // ����Ԫ������

	repeated string heroes = 10; // ����ӵ�е�����Ӣ��

	repeated string teams = 11; // ���ҵĶ���

	required int32 gold = 12; // �����еĽ���
	required int32 gem = 13; // �����е���ʯ

	required DAT_ElementProperty keys = 14; // ���ҵ�Կ��
}
