syntax = "proto2";
import "Dat_UserData.proto";
package cn.wzj.netty.proto;

message C2S_UserData
{
	required string uid = 1;  // �û�uid
	required string code = 2;  // ����У��������
}
message S2C_UserData
{
	required int32 ret = 1;
	required bool newUser = 2; // �Ƿ����û�
	required DAT_UserData userData = 3; //���ҵ���Ϣ
}
